PhD Proposal - Saturday Afternoon 02

--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -3,41 +3,38 @@
 \section{The ocean, phytoplankton and why it matters}
 The complexity of the ocean and its vast ecosystems has fascinated scientists to this day and most likely will continue to do so far into the future. Myriad life forms are embedded in a matrix so far removed from our mostly dry existence on top the earth’s crust. In the ocean, life moves in dilution, and the equivalents of forests and grasslands are hard to spot unless the concentration of tiny phytoplankton is so large, that deep blue turns into a milky green.
 
-The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}.
+The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}. This large genetic diversity is accompanied by a remarkable range of survival strategies, biogeochemical roles, shapes and sizes within the polyphyletic phytoplankton (see Figure \ref{FinkelPhySizeRange} for a size comparison).
 
-The distribution of phytoplankton is driven by the complex physical and chemical boundary conditions that govern ocean currents and upwelling systems, with the key component being macronutrients (e.g. nitrogen \& phosphorus) and micronutrients (e.g. iron \& cobalt) brought up from the deep ocean or flushed in through river estuaries. 
+\begin{figure}
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=.9\linewidth]{./Chp1-Intro/SIZEphytoComparison_FinkelEtAl2010.png}
+\caption[Scheme]{\small {"A comparison of the size range (maximum linear dimension) of phytoplanktonrelative to macroscopic objects." from \cite{Finkel2010}}}
+\label{FinkelPhySizeRange}
+\end{figure}
 
-Wherever there are plenty of nutrients and light, planktonic life begins to thrive. The biomass produced indirectly feeds a considerable part of earth’s population through fisheries (Stock et al. 2017) and even shapes the elemental composition of oceanic water itself (Redfield 1958). 
-This newly generated biomass is mostly consumed and either assimilated or regenerated within the euphotic zone, fueling regenerated production (Eppley \& Peterson 1979). A small fraction sinks out of the photic layer as fecal or detrital matter to the deeper ocean and an even smaller fraction reaches the sea floor as sediment (~1\%) and remains there over geological times (Honjo et al. 2008). 
-Carbon sequestered this way is removed from the ocean-atmosphere system for potentially millions of years. Given the projected rise of atmospheric CO$_2$ levels, it is of great importance to better understand this process, termed the biological carbon pump. In particular to grasp how changes in the planktonic community driven by anthropogenic stressors will affect it in the future.
-
-xx
+The distribution of phytoplankton is driven by the complex physical and chemical boundary conditions that govern ocean currents, with the key component being macronutrients (e.g. nitrogen \& phosphorus) and micronutrients (e.g. iron \& cobalt) welling up from the deeper ocean or flushed in from continental sources. Wherever there are sufficient nutrients available within the euphotic zone, i.e. the depth where photosyntheticaly available radiation (PAR) is 1\% of the surface value, planktonic life begins to thrive. In particular upwelling systems along continental margins provide a productive habitat, with only 10\% of total ocean surface area covered by continental margins, but 10-15\% of marine primary production and more than 40\% of carbon export to the seabed occurring along coastal lines \citep{Yool2001,Muller-Karger2005}.
 
 
-"Phytoplankton is important. Phytoplankton is diverse.
-
-"it is amazing how little we actually know about phytoplankton globally and the effects that is has on biogeochemical cycles, and how it is affected by global change for example
-"quite a few publications using models go too far in their extrapolations, whilst the general discussion still strongly revolves around meaningful model structures.. but no consensus is anywhere to be seen!
-"need to identify the basic uncertainties and see if there is a way to discuss them scientifically
-"Michaelis Menten kinetics are really outdated.. and i suppose using them in a trait-based modelling approach is questionable just the same
-"plankton ecosystems are typically highly aggregated, a single variable gives the response of an incredibly diverse assemblage of phytoplankton species (P. Franks, 2009)
-
+Phytoplankton growth indirectly feeds a considerable part of earth’s population through fisheries \citep{Stock2017} and even shapes the elemental composition of oceanic water itself \citep{Redfield1958}. Biomass produced is to a large degree consumed by higher trophic levels and either assimilated or excreted and remineralized within the euphotic zone, fueling regenerated production \citep{Eppley1979}. A small fraction sinks out of the photic layer as fecal or detrital matter to the deeper ocean and an even smaller fraction reaches the sea floor as sediment (~1\%) and remains there over geological times \citep{Honjo2008}. This process has been termed the biological carbon pump. Carbon sequestered this way is removed from the ocean-atmosphere system for potentially millions of years. Given the projected rise of atmospheric CO$_2$ levels, it is of grave importance to understand how changes in the phytoplankton community at the surface, driven by anthropogenic stressors and climate change, will affect the carbon burial potential of the oceanic ecosystems. Studies have both reported a global declining trend in marine primary production \citep{Boyce2012} and increasing trends in long-term ocean time series \citep{Chavez2011a}. In order to answer questions of how phytoplankton will respond to a changing climate it is necessary to look the diverse phytoplankton community in greater detail. 
 
 \section{Characterizing phytoplankton}
+
+Given the relevance of phytoplankton to the global 
+
 How did Researchers start dealing with Phytoplankton?
 
 Two approaches to isolate strains, or take bulk properties
 
 Obviously bulk properties also have to be taken from specific depth
 
-so this adds the problem of the complexity of the physical environment that is the ocean, with enormous volume, turbulunce/mixing, diffusion and absorbance
+so this adds the problem of the complexity of the physical environment that is the ocean, with enormous volume, turbulunce mixing, diffusion and absorbance
 
 I want to look at phytoplankton diversity, particularly from a functional type point of view. Quantify diversity as it relates to ecosystem function (as production for example).
 
 
-"Moreover, major taxonomic groups of eukaryotic phyto- plankton can be classified into distinct functional groups (Iglesias-Rodriguez et al. 2002a) with unique biogeochemical signatures. Here, we combine the trait-based approach with the taxonomic ⁄phylogenetic information by broadly sam- pling relevant traits across major taxonomic groups of marine phytoplankton to gain new insights into the effects of evolutionary history on the physiological trait distribu- tions and community structure. An important aspect of a trait-based approach to
-"community ecology is the trade-offs between traits (Tilman 1990; Grover 1991; Bohannan et al. 2002). When compe- tition for multiple resources is considered, species are thought to have trade-offs in their competitive ability for one vs. another nutrient (Tilman 1982) or for nutrient vs. light (Huisman & Weissing 1994; Leibold 1997; Klausme- ier & Litchman 2001). Under non-equilibrium conditions, a trade-off between competitive ability and maximum growth rate may
-Litchman, E., Klausmeier, C. A., Schofield, O. M., & Falkowski, P. G. (2007). The role of functional traits and trade-offs in structuring phytoplankton communities: Scaling from cellular to ecosystem level. Ecology Letters, 10(12), 1170–1181. https://doi.org/10.1111/j.1461-0248.2007.01117.x
+"Moreover, major taxonomic groups of eukaryotic phyto- plankton can be classified into distinct functional groups (Iglesias-Rodriguez et al. 2002a) with unique biogeochemical signatures. Here, we combine the trait-based approach with the taxonomic sLASh phylogenetic information by broadly sam- pling relevant traits across major taxonomic groups of marine phytoplankton to gain new insights into the effects of evolutionary history on the physiological trait distribu- tions and community structure. An important aspect of a trait-based approach to
+"community ecology is the trade-offs between traits (Tilman 1990; Grover 1991; Bohannan et al. 2002). When compe- tition for multiple resources is considered, species are thought to have trade-offs in their competitive ability for one vs. another nutrient (Tilman 1982) or for nutrient vs. light (Huisman \& Weissing 1994; Leibold 1997; Klausme- ier \& Litchman 2001). Under non-equilibrium conditions, a trade-off between competitive ability and maximum growth rate may
+Litchman, E., Klausmeier, C. A., Schofield, O. M., \& Falkowski, P. G. (2007). The role of functional traits and trade-offs in structuring phytoplankton communities: Scaling from cellular to ecosystem level. Ecology Letters, 10(12), 1170–1181. https:doi.org10.1111j.1461-0248.2007.01117.x
 
 
 XXX
@@ -88,8 +85,12 @@ This again leads to the difficulty of validating the model output in light of in
 
 A simple example of a trait-based description of phytoplankton succession is scaling the maximal nutrient acquisition rate and the respective affinity with cell size. A trade-off would emerge between different size classes, allowing for a modeled succession along gradients of nutrient depletion. One example of a very similar approach is the PhytoSFDM model developed by Acevedo-Trejos and colleagues (Acevedo‐Trejos et al. 2013, Acevedo-Trejos et al. 2015). In their approach, the trait-based modelling of phytoplankton is even further simplified, by describing an entire community as a size- distribution with a mean value and a variance, instead of modeling all the different size classes explicitly. This moment-based structure further simplifies the mathematical basis of the model, and leads to much faster processing times and less uncertainty in parameter estimation.
 
-"The study of phytoplankton community structure, also promoted by the work of \citet{Falkowski1998}, is therefore very relevant in marine ecology and is especially important for understanding how phytoplankton will respond to a changing climate and with which consequences.
 
+
+"quite a few publications using models go too far in their extrapolations, whilst the general discussion still strongly revolves around meaningful model structures.. but no consensus is anywhere to be seen!
+"need to identify the basic uncertainties and see if there is a way to discuss them scientifically
+"Michaelis Menten kinetics are really outdated.. and i suppose using them in a trait-based modelling approach is questionable just the same
+"plankton ecosystems are typically highly aggregated, a single variable gives the response of an incredibly diverse assemblage of phytoplankton species (P. Franks, 2009)
 
 
 \begin{figure}
@@ -115,16 +116,27 @@ ALWAYS NEED A GOOD BASIS IN DATA TO VALIDATE MODELS AND HYPOTHESES
 
 \section{The Cariaco basin \& the CARIACO time series}
 
+A coastal tropical ecosystem
+
 "continental margins constitute only about 10\% of the total ocean surface area, these regions are responsible for about 10–15\% of the global marine primary production and greater than 40\% of seabed carbon sequestration (Yool and Fasham, 2001; Muller-Karger et al., 2005). 
 "The Cariaco Basin, located off the coast of Venezuela, has been the site of high frequency water column sampling for marine biogeochemical and ecological observations since 1995. The observations were collected as part of the Cariaco Ocean Time-Series Program (Muller-Karger et al., 2001; Thunell et al., 2007). 
 
 XXXX
 
+In addition to the recent importance of the cariaco basin as the site of an important paleo-oceanographic time sereis, the Cariaco basin has served as a natureal laboratory for biogeochemists for over 50 years. This basin has been key in constructiong stoichiometric models of organic matter remineralization (Redfield et al 1963 and Richards 1975!), developing residence time and box models, and numerous other studies.
+
+\begin{figure}
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=1.\linewidth]{./Chp1-Intro/CARIACObasinMAP_Bringueetal2018.png}
+\caption[Scheme]{\small {"Study area. A. Location of the Cariaco Basin off the Venezuelan coast in the southern Caribbean Sea, with January and June positions of the Intertropical Convergence Zone (ITCZ). B. Location of the CARIACO station in the eastern sub-basin, general bathymetry and local rivers emptying in the basin (bathymetric data from GEBCO\_08 Grid)" from \cite{Bringue2019}}}
+\label{CARIACO-map}
+\end{figure}
+
 XXXX
 
 XXX
 
-THEN TALK ABOUT THE COLLAB/DATASHARE WITH JPINCKNEY AND CBENITEZNELSON, and how this allows an even deeper look at the biomass dynamics
+THEN TALK ABOUT THE COLLABorDATASHARE WITH JPINCKNEY AND CBENITEZNELSON, and how this allows an even deeper look at the biomass dynamics
 
 
 \section{Aims of the proposed PhD project}
