--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,171 @@
+@article{Chavez2011a,
+abstract = {Marine photosynthetic plankton are responsible for approximately 50 petagrams (10(15)) of carbon per year of net primary production, an amount equivalent to that on land. This primary production supports essentially all life in the oceans and profoundly affects global biogeochemical cycles and climate. This review discusses the general distribution of primary production in the sea, the processes that regulate this distribution, and how marine primary production is sensitive to climate variability and change. Statistical modes of ocean variability and their characteristic interannual to multi-decadal timescales over the last century are described. Recent in situ and satellite time-series of primary production can be clearly linked to interannual ocean variability. Global marine primary production appears to have increased over the past several decades in association with multi-decadal variations. A paleoclimate record extends discussion to the centennial scale, providing contrasting insights into how marine primary production might vary in the future.},
+annote = {very general analysis of relationship between climate variability indices, like ENSO, and marine primary production
+
+they also analyse Cariaco, so it might be interesting to quote this in the introduction, but not much else..},
+author = {Chavez, Francisco P. and Messi{\'{e}}, Monique and Pennington, J. Timothy},
+doi = {10.1146/annurev.marine.010908.163917},
+file = {:Users/bp/Documents/Mendeley Desktop/annurev.marine.010908.163917.pdf:pdf},
+isbn = {1941-1405$\backslash$r1941-0611},
+issn = {1941-1405},
+journal = {Annual Review of Marine Science},
+keywords = {biogeochemistry,climate,nutrients,phytoplankton,primary production},
+mendeley-groups = {CARIACO,PhD Proposal BibTex/cited},
+number = {1},
+pages = {227--260},
+pmid = {21329205},
+title = {{Marine Primary Production in Relation to Climate Variability and Change}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev.marine.010908.163917},
+volume = {3},
+year = {2010}
+}
+
+
+@article{Boyce2012,
+abstract = {Understanding large-scale phytoplankton dynamics requires accurate, multi-decadal measurements of abundance and distribution. Since 1890, marine phytoplankton abundance has been assessed using a diverse range of sensors and observational platforms, and inter-calibrating these data have been challenging. Consequently, syntheses of historical phytoplankton data have been rarely attempted, and the need for accurate,long-term assessments of phytoplankton abundance and distribution is commonly acknowledged. Here, we derive quantitative indices of phytoplankton abundance from measurements of upper ocean transparency and color-calibrated with direct measurements of surface chlorophyll. The strong correlation and linear scaling of the predicted data enabled the construction of a comprehensive, globally intercalibrated chlorophyll time series from 1890 to 2010. The calibrated chlorophyll data reproduced the well established spatial features of phytoplankton surface biomass and were strongly correlated with chlorophyll concentration derived from two independent remote sensing platforms discontinuously available since 1978. These results suggest that with careful statistical treatment it is possible to generate a globally integrated chlorophyll time series extending 120 years into the past. This database, which is available in the web appendices of this paper, may enable new insights in the areas of climate science, biogeochemical cycling, and marine ecosystem structure and functioning over the past century.},
+author = {Boyce, Daniel G. and Lewis, Marlon and Worm, Boris},
+doi = {10.4319/lom.2012.10.840b},
+file = {:Users/bp/Documents/Mendeley Desktop/lom.2012.10.840.pdf:pdf},
+issn = {15415856},
+journal = {Limnology and Oceanography: Methods},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {11},
+pages = {840--852},
+publisher = {Wiley Online Library},
+title = {{Integrating global chlorophyll data from 1890 to 2010}},
+volume = {10},
+year = {2012}
+}
+
+
+@article{Honjo2008,
+abstract = {Particulate organic carbon (POC) is vertically transported to the oceanic interior by aggregates and their ballasts, mainly CaCO 3 and biogenic opal, with a smaller role for lithogenic aerosols through the mesopelagic zone. Diel migrating zooplankton communities effect vertical transport and remineralization of POC in the upper layers of the ocean. Below 1.5 km, the presence of zooplankton is reduced and thus the aggregates travel mainly by gravitational transport. We normalized the fluxes of POC, CaCO 3 , and biogenic opal from data published on samples collected at 134 globally distributed, bottom-tethered, time-series sediment trap (TS-trap) stations to annual mole fluxes at the mesopelagic/bathypelagic boundary (m/b) at 2 km and defined them as F m/b C org , F m/b C inorg , and F m/b Si bio . Using this global data set, we investigated (1) the geographic contrasts of POC export at m/b and (2) the supply rate of ∑CO 2 to the world mesopelagic water column. F m/b C org varies from 25 (Pacific Warm Pool) to 605 (divergent Arabian Sea) mmolC m -2 yr -1 ; F m/b C inorg varies from {\textgreater}8 (high latitude Polar Oceans) or 15 (Pacific Warm Pool) to 459 (divergent Arabian Sea) mmolC m -2 yr -1 ; and F m/b Si bio , the most spatially/temporally variable flux, ranges from 6 (North Atlantic Drift) to 1118 (Pacific Subarctic Gyre) mmolSi m -2 yr -1 . The oceanic region exhibiting the highest POC flux over a significantly large region is the area of the North Pacific Boreal Gyres where the average F m/b C org = 213, F m/b C inorg = 126, and F m/b Si bio = 578 mmol m -2 yr -1 . F m/b C org and F m/b C inorg are particularly high in large upwelling margins, including the divergent Arabian Sea and off Cape Verde. One of the data sets showing the lowest flux over a significant region/basin is F m/b C org = 39, F m/b C inorg = 69, and F m/b Si bio = 22 mmol m -2 yr -1 in the North Pacific subtropical/tropical gyres; Pan-Atlantic average fluxes are similar except F m/b Si bio fluxes are even lower. Where C org /C inorg and Si bio /C inorg are {\textless}1 defines the "Carbonate Ocean", and where these ratios are ≥1 defines the "Silica Ocean". The Carbonate Ocean occupies about 80{\%} of the present world pelagic ocean between the two major oceanographic fronts, the North Pacific Polar Front and the Antarctic Polar Front, and the Silica Ocean is found on the polar sides of these fronts. The total global annual fluxes of F m/b C org , F m/b C inorg , and F m/b Si bio at m/b calculated by parameterizations of the export flux data from 134 stations are surprisingly similar; 36.2, 33.8, and 34.6 teramol yr -1 (120, 112, and 114 mmol m -2 yr -1 ), respectively, resulting in a near uniform binary ratio between the above three elements of about one. The global ternary {\%} ratios estimated from 152 TS-trap samples of the three elements are 35:32:33. From our global F m/b C org and a published model estimate of the global export production, we estimate the regeneration rate of CO 2 through the mesopelagic zone by the biological pump is 441 teramolC yr -1 . Based on our global F m/b C inorg and recently estimated global primary production of PIC, 36-86 teramolC yr -1 of PIC is assumed to be dissolved within the upper 2 km of the water column. {\textcopyright} 2008 Elsevier Ltd. All rights reserved.},
+author = {Honjo, Susumu and Manganini, Steven J. and Krishfield, Richard A. and Francois, Roger},
+doi = {10.1016/j.pocean.2007.11.003},
+file = {:Users/bp/Documents/Mendeley Desktop/fluxo{\_}vertical{\_}Honjo{\_}et{\_}al2008.pdf:pdf},
+issn = {00796611},
+journal = {Progress in Oceanography},
+keywords = {Biological pump,Global particle fluxes,Mesopelagic CO 2 sink,POC,Remineralization,Vertical transport},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {3},
+pages = {217--285},
+publisher = {Elsevier},
+title = {{Particulate organic carbon fluxes to the ocean interior and factors controlling the biological pump: A synthesis of global sediment trap programs since 1983}},
+volume = {76},
+year = {2008}
+}
+
+
+@article{Eppley1979,
+author = {Eppley, Richard W and Peterson, Bruce J},
+file = {:Users/bp/Documents/Mendeley Desktop/Eppley {\&} Peterson 1979 Nature copy.pdf:pdf},
+issn = {1476-4687},
+journal = {Nature},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {5740},
+pages = {677},
+publisher = {Nature Publishing Group},
+title = {{Particulate organic matter flux and planktonic new production in the deep ocean}},
+volume = {282},
+year = {1979}
+}
+
+
+@article{Redfield1958,
+author = {Redfield, Alfred C},
+file = {:Users/bp/Documents/Mendeley Desktop/27827150.pdf:pdf},
+issn = {0003-0996},
+journal = {American scientist},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {3},
+pages = {230A--221},
+publisher = {JSTOR},
+title = {{The biological control of chemical factors in the environment}},
+volume = {46},
+year = {1958}
+}
+
+
+@article{Stock2017,
+abstract = {Photosynthesis fuels marine food webs, yet differences in fish catch across globally distributed marine ecosystems far exceed differences in net primary production (NPP). We consider the hypothesis that ecosystem-level variations in pelagic and benthic energy flows from phytoplankton to fish, trophic transfer efficien- cies, and fishing effort can quantitatively reconcile this contrast in an energetically consistent manner. To test this hypothesis, we enlist global fish catch data that include previously neglected contributions from small-scale fisheries, a synthesis of global fishing effort, and plankton food web energy flux estimates from a prototype high-resolution global earth system model (ESM). After removing a small number of lightly fished ecosystems, stark interregional differences in fish catch per unit area can be explained (r = 0.79) with an energy-based model that (i) considers dynamic interregional differences in benthic and pelagic energy pathways connecting phytoplankton and fish, (ii) depresses trophic transfer efficiencies in the tropics and, less critically, (iii) associates elevated trophic transfer efficiencies with benthic-predominant systems. Model catch estimates are generally within a factor of 2 of values spanning two orders of magnitude. Climate change projections show that the same macroecological patterns explaining dramatic regional catch differences in the contemporary ocean amplify catch trends, producing changes that may exceed 50{\%}in some regions by the end of the 21st century under high-emissions scenarios. Models failing to resolve these trophodynamic patterns may significantly underestimate regional fisheries catch trends and hinder adaptation to climate change},
+author = {Stock, Charles A. and John, Jasmin G. and Rykaczewski, Ryan R. and Asch, Rebecca G. and Cheung, William W. L. and Dunne, John P. and Friedland, Kevin D. and Lam, Vicky W. Y. and Sarmiento, Jorge L. and Watson, Reg A.},
+doi = {10.1073/pnas.1610238114},
+file = {:Users/bp/Documents/Mendeley Desktop/E1441.full.pdf:pdf},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {8},
+pages = {E1441--E1449},
+title = {{Reconciling fisheries catch and ocean productivity}},
+volume = {114},
+year = {2017}
+}
+
+
+@article{Muller-Karger2005,
+abstract = {Approximately half of the world's net annual photosynthesis occurs in the oceans (48 Pg C /yr). Areas bordering continents (bottom {\textless}2000m) support 10-15{\%} of this production. We used satellite data to compute annual global net primary production (1998-2001), and derived the global particulate organic carbon (POC) flux settling below the permanent thermocline and to the seafloor using an empirical model of POC remineralization. Approximately 0.68 Pg C /yr sink below the thermocline on continental margins, compared to 1.01 Pg C /yr in the deep ocean. Over 0.62 Pg C /yr settles to the seafloor on margins, compared to 0.31 Pg C /yr to deep ocean sediments. At least 0.06 Pg C /yr may be buried in sediments on margins. Therefore, margins may be responsible for {\textgreater}40{\%} of the carbon sequestration in the ocean. These regions must be accounted for in realistic models of the global carbon cycle and its linkages to climate change.},
+author = {Muller-Karger, Frank E. and Varela, Ramon and Thunell, Robert and Luerssen, Remy and Hu, Chuanmin and Walsh, John J.},
+doi = {10.1029/2004GL021346},
+file = {:Users/bp/Documents/Mendeley Desktop/2004GL021346.pdf:pdf},
+isbn = {0094-8276},
+issn = {00948276},
+journal = {Geophysical Research Letters},
+mendeley-groups = {CARIACO},
+number = {1},
+pages = {1--4},
+title = {{The importance of continental margins in the global carbon cycle}},
+volume = {32},
+year = {2005}
+}
+
+@article{Yool2001,
+author = {Yool, Andrew and Fasham, Michael J R},
+file = {:Users/bp/Documents/Mendeley Desktop/2000GB001359.pdf:pdf},
+issn = {0886-6236},
+journal = {Global Biogeochemical Cycles},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {4},
+pages = {831--844},
+publisher = {Wiley Online Library},
+title = {{An examination of the “continental shelf pump” in an open ocean general circulation model}},
+volume = {15},
+year = {2001}
+}
+
+
+@article{Bringue2019,
+abstract = {Seasonal and interannual variability in dinoflagellate cyst production were assessed using a 12.5 year-long sediment trap time series from the Cariaco Basin (southern Caribbean Sea). This study constitutes the longest such time series published to date, providing robust patterns of variability for individual dinoflagellate cyst taxa as well as for major phytoplanktonic and (micro-)zooplanktonic groups at the site. Cyst production is interpreted in the context of physico-chemical properties measured in situ at the mooring site (primarily reflecting seasonal upwelling), and considering potential interactions with other major components of the pelagic food web (e.g., diatoms, ciliates, copepods). The time series consists in {\textgreater}300 sediment trap samples, each representing ∼14 days of sedimentation, collected at the CARIACO station between Nov. 8, 1996 and May 19, 2009. Mass fluxes of biogenic silica, calcium carbonate and organic carbon reflect dominantly the timing and strength of wind-driven, seasonal upwelling that brings colder, nutrient-rich waters to the surface, fostering primary productivity and the export of biogenous materials to the depths. On seasonal time scales, dinoflagellate cyst production is closely coupled with upwelling strength, with higher cyst fluxes consistently observed under active upwelling conditions (average of 50.5 × 103 cysts m−2 day−1) compared to non-active upwelling intervals (29.0 × 103 cysts m−2 day−1). Year-to-year variability is characterized by a large increase in cyst production observed over the last ∼4 years of the time series (2006–2009) and minimum cyst fluxes recorded in the years 1998 and 1999, following the strong 1997/98 El Ni{\~{n}}o event. Dinoflagellate cyst assemblages are dominated by Brigantedinium spp. (59.1{\%}), accompanied by Echinidinium delicatum (10.8{\%}), Bitectatodinium spongium (8.4{\%}), Spiny brown type A (2.9{\%}) and Echinidinium spp. (2.4{\%}). Cyst produced by both autotrophic and heterotrophic dinoflagellates generally respond positively to upwelling in the basin. Most cyst taxa are associated with active upwelling conditions (e.g., Bitectatodinium spongium, Brigantedinium spp., Echinidinium delicatum, Quinquecuspis concreta, Selenopemphix quanta, Spiny brown type C), with some showing higher fluxes under active but weak upwelling conditions (e.g., Echinidinium granulatum, Echinidinium spp., cyst of P. fukuyoi, Spiny brown type A). Other cyst taxa tend to show higher abundances at the onset of upwelling conditions (e.g., Echinidinium aculeatum, cyst of Protoperidinium stellatum) or following active upwelling intervals (e.g., Lejeunecysta marieae, Selenopemphix nephroides). The detailed response of each dinoflagellate cyst taxon to environmental variability is presented in the form of an atlas, providing photomicrographs and detailing overall monthly production, contribution to the total trap assemblage as well as cyst production over the 12.5 years of the time series.},
+author = {Bringu{\'{e}}, Manuel and Pospelova, Vera and Tappa, Eric J. and Thunell, Robert C.},
+doi = {10.1016/j.pocean.2018.12.007},
+file = {:Users/bp/Documents/Mendeley Desktop/1-s2.0-S0079661118302052-main.pdf:pdf},
+issn = {00796611},
+journal = {Progress in Oceanography},
+keywords = {El Ni{\~{n}}o,Interannual variability,Microzooplankton,Phytoplankton,Seasonal variability,Southern Caribbean Sea,Upwelling},
+mendeley-groups = {CARIACO},
+pages = {175--211},
+title = {{Dinoflagellate cyst production in the Cariaco Basin: A 12.5 year-long sediment trap study}},
+volume = {171},
+year = {2019}
+}
+
+
+@article{Finkel2010,
+abstract = {Global increases in atmospheric CO2 and temperature are associated with changes in ocean chemistry and circulation, altering light and nutrient regimes. Resulting changes in phytoplankton community structure are expected to have a cascading effect on primary and export production, food web dynamics and the structure of the marine food web as well the biogeochemical cycling of carbon and bio-limiting elements in the sea. A review of current literature indicates cell size and elemental stoichiometry often respond predictably to abiotic conditions and follow biophysical rules that link environmental conditions to growth rates, and growth rates to food web interactions, and consequently to the biogeochemical cycling of elements. This suggests that cell size and elemental stoichiometry are promising ecophysiological traits for modelling and tracking changes in phytoplankton community structure in response to climate change. In turn, these changes are expected to have further impacts on phytoplankton community structure through as yet poorly understood secondary processes associated with trophic dynamics.},
+author = {Finkel, Zoe V. and Beardall, John and Flynn, Kevin J. and Quigg, Antonietta and Rees, T. Alwyn V. and Raven, John A.},
+doi = {10.1093/plankt/fbp098},
+file = {:Users/bp/Documents/Mendeley Desktop/fbp098.pdf:pdf},
+isbn = {0142-7873},
+issn = {01427873},
+journal = {Journal of Plankton Research},
+mendeley-groups = {DAAD app,PhD Proposal BibTex/cited},
+number = {1},
+pages = {119--137},
+title = {{Phytoplankton in a changing world: Cell size and elemental stoichiometry}},
+volume = {32},
+year = {2010}
+}
+
+
 @article{Falkowski2004a,
 abstract = {The community structure and ecological function of contemporary marine ecosystems are critically dependent on eukaryotic phytoplankton. Although numerically inferior to cyanobacteria, these organisms are responsible for the majority of the flux of organic matter to higher trophic levels and the ocean interior. Photosynthetic eukaryotes evolved more than 1.5 billion years ago in the Proterozoic oceans. However, it was not until the Mesozoic Era (251 to 65 million years ago) that the three principal phytoplankton clades that would come to dominate the modern seas rose to ecological prominence. In contrast to their pioneering predecessors, the dinoflagellates, coccolithophores, and diatoms all contain plastids derived from an ancestral red alga by secondary symbiosis. Here we examine the geological, geochemical, and biological processes that contributed to the rise of these three, distantly related, phytoplankton groups.},
 author = {Falkowski, Paul G. and Katz, Miriam E. and Knoll, Andrew H. and Quigg, Antonietta and Raven, John A. and Schofield, Oscar and Taylor, F. J.R.},
